# STM32PickDK

./: .gitignore  readme.md
1.hardware/STM32PicoDK/: STM32PicoDK.PrjPcb  main.SchDoc
1.hardware/STM32PicoDK/__Previews/: main.SchDocPreview
2.firmware/STM32PicoDK/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F103C8TX_FLASH.ld  STM32PicoDK.ioc  stm32f103c8.cfg
2.firmware/STM32PicoDK/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
2.firmware/STM32PicoDK/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  usart.c
2.firmware/STM32PicoDK/MDK-ARM/: STM32PicoDK.uvguix.moon  STM32PicoDK.uvoptx  STM32PicoDK.uvprojx  startup_stm32f103xb.s
2.firmware/STM32PicoDK/MDK-ARM/RTE/_STM32PicoDK/: RTE_Components.h
2.firmware/STM32PicoDK/MDK-ARM/STM32PicoDK/: STM32PicoDK.axf  STM32PicoDK.build_log.htm  STM32PicoDK.hex  STM32PicoDK.htm  STM32PicoDK.lnp  STM32PicoDK.map  STM32PicoDK_STM32PicoDK.dep  commander.d  common.d  dma.d  fifoarray.d  gpio.d  i2c.d  main.d  main_1.d  mui.d  mui_u8g2.d  oled.d  softtimer.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pcd.d  stm32f1xx_hal_pcd_ex.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_uart.d  stm32f1xx_it.d  stm32f1xx_ll_usb.d  system_stm32f1xx.d  (+129 more)
2.firmware/STM32PicoDK/USB_DEVICE/App/: usbd_cdc_if.c
2.firmware/STM32PicoDK/UserApp/: Main.cpp  OLed.cpp  OLed.h  common.cpp  common_inc.h  example.h  u8g2_example.cpp
2.firmware/STM32PicoDK/UserApp/Commander/: Commander.cpp  Commander.h
2.firmware/STM32PicoDK/UserApp/SoftTimer/: SoftTimer.cpp
2.firmware/STM32PicoDK/UserApp/TFT_Lcd/: tft_lcd.cpp  tft_lcd.h  user_setup.h
2.firmware/STM32PicoDK/UserApp/TFT_Lcd/Common/: tft_type.h
2.firmware/STM32PicoDK/UserApp/TFT_Lcd/Fonts/: Font16.c  Font32rle.c  Font64rle.c  Font72rle.c  Font7srle.c  font.h
2.firmware/STM32PicoDK/UserApp/TFT_Lcd/TFT_Drivers/: ST7789_2_Defines.h
2.firmware/STM32PicoDK/UserApp/U8g2/src/clib/: u8x8_d_sh1107.c  u8x8_d_ssd1306_72x40.c  u8x8_d_ssd1327.c
2.firmware/STM32PicoDK/UserApp/lib/: SoftI2c.cpp  SoftI2c.h  Stm32Gpio.cpp  Stm32Gpio.h
